# AIFileQA

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  docker-compose.yml  phase.md  report.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9d3b6b4a2f11_add_chat_message_sources.py  a6e84f6d9c12_add_provider_embedding_fields.py  b4e7d5f8c2a1_add_chat_session_provider_id.py  c8fc7452a3bb_add_document_chunks_table.py  ceb45ad66867_initial_tables.py  d7f1b2c3a4e5_add_provider_test_fields_and_jobs.py  f2c4e8a9d1b3_add_chat_session_document_ids_json.py
backend/app/: main.py
backend/app/api/: __init__.py  chat.py  documents.py  providers.py  retrieval.py
backend/app/core/: config.py  database.py  observability.py  security.py
backend/app/models/: __init__.py  chat.py  document.py  job.py  provider.py
backend/app/schemas/: __init__.py  chat.py  document.py  provider.py  retrieval.py
backend/app/services/: __init__.py  chat_service.py  document_service.py  embedding_service.py  job_service.py  llm_service.py  parser_service.py  parsing_task.py  provider_payloads.py  provider_service.py  provider_url.py  retrieval_service.py  (+1 more)
backend/tests/: conftest.py  test_api_chat.py  test_api_documents.py  test_api_providers.py  test_config.py  test_embedding_e2e.py  test_embedding_service.py  test_full_flow_api.py  test_llm_service.py  test_observability.py  test_parser_service.py  test_parsing_jobs.py  test_retrieval_service.py  test_security.py  test_vector_store_service.py
(+75 files in other folders)
