[project]
name = "filemanagement-backend"
version = "0.1.0"
description = "智能文档问答助手 — FastAPI Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.21,<1",
    "alembic>=1.15,<2",
    "pydantic-settings>=2.7,<3",
    "python-multipart>=0.0.20,<1",
    "httpx>=0.28,<1",
    "pymupdf>=1.25,<2",
    "python-docx>=1.1,<2",
    "chromadb>=0.5,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.25,<1",
    "httpx>=0.28,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
